--- a/shelf/Cargo.toml
+++ b/shelf/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["David Li <li.davidm96@gmail.com>"]
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
 serde = "1.0"
 serde_derive = "1.0"
 serde_yaml = "0.7"
