--- a/shelf-server/static/package.json
+++ b/shelf-server/static/package.json
@@ -14,6 +14,7 @@
     "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1"
   }
 }
