--- a/shelf-server/static/package.json
+++ b/shelf-server/static/package.json
@@ -9,11 +9,12 @@
   "author": "David M. Li <li.davidm96@gmail.com>",
   "license": "MPL-2.0",
   "devDependencies": {
-    "@vue/component-compiler-utils": "^2.0.0",
+    "@vue/component-compiler-utils": "1.3.1",
     "parcel-bundler": "^1.8.1",
     "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
+    "thenby": "^1.2.5",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   }
