--- a/shelf/Cargo.toml
+++ b/shelf/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["David Li <li.davidm96@gmail.com>"]
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
+git2 = "0.7"
 serde = "1.0"
 serde_derive = "1.0"
 serde_yaml = "0.7"
