feat(server): add proxy for importing URLs

--- a/shelf-server/Cargo.toml
+++ b/shelf-server/Cargo.toml
@@ -5,9 +5,10 @@ authors = ["David Li <li.davidm96@gmail.com>"]
 
 [dependencies]
 actix = "~0.5"
-actix-web = "~0.6"
+actix-web = { version = "~0.6", features = ["tls"] }
 app_dirs = "1.2"
 clap = "2.31"
+futures = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_yaml = "0.7"
