--- a/shelf-server/static/package.json
+++ b/shelf-server/static/package.json
@@ -14,6 +14,7 @@
     "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
+    "moment": "^2.22.2",
     "thenby": "^1.2.5",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
