--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,10 +10,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cargo build --verbose
+      run: cargo build
       working-directory: shelf
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test
       working-directory: shelf
     - name: Clippy
       run: cargo clippy
