--- a/shelf-server/Cargo.toml
+++ b/shelf-server/Cargo.toml
@@ -3,6 +3,7 @@ name = "shelf-server"
 edition = "2018"
 version = "0.2.0"
 authors = ["David Li <li.davidm96@gmail.com>"]
+license = "Apache-2.0"
 
 [dependencies]
 app_dirs = "1.2"
