--- a/shelf-server/static/package.json
+++ b/shelf-server/static/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "David M. Li <li.davidm96@gmail.com>",
-  "license": "MPL-2.0",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@vue/component-compiler-utils": "1.3.1",
     "parcel-bundler": "^1.8.1",
