--- a/shelf-web/Cargo.toml
+++ b/shelf-web/Cargo.toml
@@ -3,6 +3,7 @@ name = "shelf-web"
 version = "0.1.0"
 authors = ["David Li <li.davidm96@gmail.com>"]
 edition = "2018"
+license = "Apache-2.0"
 
 [dependencies]
 app_dirs = "1.2"
