--- a/shelf/Cargo.toml
+++ b/shelf/Cargo.toml
@@ -3,6 +3,7 @@ name = "shelf"
 edition = "2018"
 version = "0.1.0"
 authors = ["David Li <li.davidm96@gmail.com>"]
+license = "Apache-2.0"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
