--- a/shelf-server/static/package.json
+++ b/shelf-server/static/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "parcel build --public-url . index.html",
+    "test": "ava",
+    "watch": "parcel watch --no-hmr --public-url . index.html"
   },
   "author": "David M. Li <li.davidm96@gmail.com>",
   "license": "Apache-2.0",
   "devDependencies": {
     "@vue/component-compiler-utils": "1.3.1",
+    "ava": "^3.5.0",
     "parcel-bundler": "^1.10.0",
     "vue-template-compiler": "^2.5.16"
   },
@@ -18,10 +21,5 @@
     "thenby": "^1.2.5",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
-  },
-  "scripts": {
-    "build": "parcel build --public-url . index.html",
-    "test": "ava",
-    "watch": "parcel watch --no-hmr --public-url . index.html"
   }
 }
