--- a/shelf-server/Cargo.toml
+++ b/shelf-server/Cargo.toml
@@ -8,6 +8,7 @@ license = "Apache-2.0"
 [dependencies]
 app_dirs = "1.2"
 log = "0.4"
+percent-encoding = "2.1"
 pretty_env_logger = "0.3"
 reqwest = { version = "0.10" }
 serde = "1.0"
