--- a/shelf-server/static/package.json
+++ b/shelf-server/static/package.json
@@ -13,10 +13,11 @@
   "devDependencies": {
     "@vue/component-compiler-utils": "1.3.1",
     "ava": "^3.5.0",
-    "parcel-bundler": "^1.10.0",
+    "parcel-bundler": "1.12",
     "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
+    "core-js": "3",
     "moment": "^2.22.2",
     "thenby": "^1.2.5",
     "vue": "^2.5.16",
