--- a/shelf-server/Cargo.toml
+++ b/shelf-server/Cargo.toml
@@ -7,6 +7,8 @@ license = "Apache-2.0"
 
 [dependencies]
 app_dirs = "1.2"
+futures = "0.3"
+hyper = "0.13"
 log = "0.4"
 percent-encoding = "2.1"
 pretty_env_logger = "0.3"
@@ -14,8 +16,11 @@ reqwest = { version = "0.10" }
 serde = "1.0"
 serde_derive = "1.0"
 serde_yaml = "0.7"
-tokio = { version = "0.2", features = ["macros"] }
+tokio = { version = "0.2", features = ["macros", "signal"] }
 warp = "0.2"
 
 [dependencies.shelf]
 path = "../shelf"
+
+[dependencies.growler]
+path = "../growler"
