--- a/growler/Cargo.toml
+++ b/growler/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2018"
 [dependencies]
 futures = "0.3"
 hyper = "0.13"
+serde = "1.0"
+serde_json = "1.0"
 tokio = { version = "0.2", features = ["macros", "signal"] }
