--- a/shelf-server/Cargo.toml
+++ b/shelf-server/Cargo.toml
@@ -15,6 +15,7 @@ pretty_env_logger = "0.3"
 reqwest = { version = "0.10" }
 serde = "1.0"
 serde_derive = "1.0"
+serde_json = "1.0"
 serde_yaml = "0.7"
 tokio = { version = "0.2", features = ["macros", "signal"] }
 warp = "0.2"
