--- a/growler/Cargo.toml
+++ b/growler/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 futures = "0.3"
 http = "0.2"
 hyper = "0.13"
+log = "0.4"
 regex = { version = "1", features = ["std", "perf"] }
 serde = "1.0"
 serde_json = "1.0"
