--- a/shelf-server/Cargo.toml
+++ b/shelf-server/Cargo.toml
@@ -7,6 +7,7 @@ license = "Apache-2.0"
 
 [dependencies]
 app_dirs = "1.2"
+bytes = "0.5"
 futures = "0.3"
 hyper = "0.13"
 log = "0.4"
@@ -22,9 +23,6 @@ warp = "0.2"
 
 [dependencies.shelf]
 path = "../shelf"
-
-[dependencies.growler]
-path = "../growler"
 
 [dev-dependencies]
 tempfile = "3"
