--- a/shelf-server/static/v2/package.json
+++ b/shelf-server/static/v2/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-dev": "^1.1.2",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^6.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
-  },
-  "dependencies": {
-    "page": "^1.11.6",
-    "sirv-cli": "^1.0.0"
-  }
+    "name": "svelte-app",
+    "version": "1.0.0",
+    "scripts": {
+        "build": "rollup -c",
+        "dev": "rollup -c -w",
+        "start": "sirv public",
+        "test": "ava"
+    },
+    "devDependencies": {
+        "@rollup/plugin-commonjs": "^14.0.0",
+        "@rollup/plugin-json": "^4.1.0",
+        "@rollup/plugin-node-resolve": "^8.0.0",
+        "ava": "^3.13.0",
+        "rollup": "^2.3.4",
+        "rollup-plugin-dev": "^1.1.2",
+        "rollup-plugin-ignore": "^1.0.9",
+        "rollup-plugin-livereload": "^2.0.0",
+        "rollup-plugin-svelte": "^6.0.0",
+        "rollup-plugin-terser": "^7.0.0",
+        "svelte": "^3.0.0"
+    },
+    "dependencies": {
+        "date-fns": "^2.16.1",
+        "jsdom": "^16.4.0",
+        "page": "^1.11.6",
+        "sirv-cli": "^1.0.0"
+    },
+    "ava": {
+        "files": [
+            "src/**/*.test.mjs"
+        ]
+    }
 }
