--- a/shelf-server/static/v2/package.json
+++ b/shelf-server/static/v2/package.json
@@ -12,6 +12,8 @@
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^8.0.0",
         "ava": "^3.13.0",
+        "prettier": "2.1.2",
+        "prettier-plugin-svelte": "1.4.1",
         "rollup": "^2.3.4",
         "rollup-plugin-dev": "^1.1.2",
         "rollup-plugin-ignore": "^1.0.9",
