--- a/shelf-server/static/v2/package.json
+++ b/shelf-server/static/v2/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "date-fns": "^2.16.1",
         "jsdom": "^16.4.0",
+        "lodash": "^4.17.21",
         "page": "^1.11.6",
         "sirv-cli": "^1.0.0"
     },
