--- a/shelf-server/static/v2/package.json
+++ b/shelf-server/static/v2/package.json
@@ -23,11 +23,13 @@
         "svelte": "^3.0.0"
     },
     "dependencies": {
+        "any-ascii": "^0.1.7",
         "date-fns": "^2.16.1",
         "jsdom": "^16.4.0",
         "lodash": "^4.17.21",
         "page": "^1.11.6",
-        "sirv-cli": "^1.0.0"
+        "sirv-cli": "^1.0.0",
+        "wanakana": "^4.0.2"
     },
     "ava": {
         "files": [
