--- a/shelf-server/static/v2/package.json
+++ b/shelf-server/static/v2/package.json
@@ -29,6 +29,7 @@
         "lodash": "^4.17.21",
         "page": "^1.11.6",
         "sirv-cli": "^1.0.0",
+        "thenby": "^1.3.4",
         "wanakana": "^4.0.2"
     },
     "ava": {
